# doc/api.yaml
@@ -88,6 +88,27 @@ paths:
               schema: { $ref: "#/components/schemas/User" }
 
 
+  /users:
+    get:
+      tags:
+        - Users
+      description: |-
+        Return the list of all users.
+      operationId: getAllUsers
+      summary: Get the list of registered users
+      responses:
+        "200":
+          description: List of users
+          content:
+            application/json:
+              schema:
+                description: The list of users
+                type: array
+                minItems: 1
+                maxItems: 1000
+                items: { $ref: "#/components/schemas/User" }
+
+
   /conversations:
     get:
       tags:
@@ -232,16 +253,15 @@ paths:
               schema: { $ref: "#/components/schemas/User" }
 
 
-  /messages/{id}/comments:
+  /messages/{msg_id}/comments:
     parameters:
-      - name: id
+      - name: msg_id
         in: path
         required: true
         description: The id of a message
         schema:
           type: integer
           description: message/0123
-
     post:
       tags:
         - Message
@@ -264,10 +284,6 @@ paths:
                   minLength: 1
                   maxLength: 1024
                   example: "Hello world!"
-                conversationId:
-                  type: integer
-                  description: the id of the conversation
-                  example: 0123
       responses:
         '201':
           description: Comment added
