# service/api/get-all-users.go
@@ -9,7 +9,7 @@ import (
 	_ "github.com/mattn/go-sqlite3"
 )
 
-func (rt *_router) getMyConversations(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+func (rt *_router) getAllUsers(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	// Authenticate user through session token
 	var user User
 	var err error
@@ -27,19 +27,19 @@ func (rt *_router) getMyConversations(w http.ResponseWriter, r *http.Request, ps
 		return
 	}
 
-	// Get the conversations
-	var conversations []database.Conversation
-	conversations, err = rt.db.GetMyConversations(user.Id)
+	// Get the list of users
+	var users []database.User
+	users, err = rt.db.GetAllUsers()
 	if err != nil {
-		rt.baseLogger.Error("error trying to get conversations: " + err.Error())
+		rt.baseLogger.Error("error trying to get the list of users (" + err.Error() + ")")
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
-	rt.baseLogger.Info("retrieved ", len(conversations), " conversations")
+	rt.baseLogger.Info("retrieved ", len(users), " users")
 
 	// Prepare and send the response
 	w.Header().Set("Content-Type", "application/json")
-	err_encoder := json.NewEncoder(w).Encode(conversations)
+	err_encoder := json.NewEncoder(w).Encode(users)
 	if err_encoder != nil {
 		rt.baseLogger.Error("error during the encoding of the json")
 		w.WriteHeader(http.StatusInternalServerError)
